data/derived/sp14/progs/unify/prog3126.ml.out
Characters 29-40:
  wwhile ((b,f b = b),b);;
          ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
